--- a/Depoza/Base.lproj/Main.storyboard
+++ b/Depoza/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="Wwr-sZ-vet">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="Wwr-sZ-vet">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <scenes>
         <!--Search-->
@@ -694,7 +694,7 @@
                         <sections>
                             <tableViewSection footerTitle="Manage categories. Add or change the category." id="dyv-25-eoq" userLabel="CategorySection">
                                 <cells>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="e0U-Ne-J04" style="IBUITableViewCellStyleDefault" id="ndQ-Ny-pkq" userLabel="Category">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="e0U-Ne-J04" imageView="ErS-gh-rDs" style="IBUITableViewCellStyleDefault" id="ndQ-Ny-pkq" userLabel="Category">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ndQ-Ny-pkq" id="3rX-WK-b1B">
                                             <autoresizingMask key="autoresizingMask"/>
@@ -705,13 +705,16 @@
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" image="Content.png" id="ErS-gh-rDs">
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                </imageView>
                                             </subviews>
                                         </tableViewCellContentView>
                                         <connections>
                                             <segue destination="uP3-aB-RxQ" kind="push" identifier="Categories" id="qge-y3-6o4"/>
                                         </connections>
                                     </tableViewCell>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="1mw-1W-tE6" style="IBUITableViewCellStyleDefault" id="3bN-uE-5y0" userLabel="AddCategory">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="1mw-1W-tE6" imageView="HBM-ND-nQG" style="IBUITableViewCellStyleDefault" id="3bN-uE-5y0" userLabel="AddCategory">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="3bN-uE-5y0" id="ciw-bD-b2A">
                                             <autoresizingMask key="autoresizingMask"/>
@@ -722,6 +725,9 @@
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" image="CreateNew.png" id="HBM-ND-nQG">
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                </imageView>
                                             </subviews>
                                         </tableViewCellContentView>
                                         <connections>
@@ -732,7 +738,7 @@
                             </tableViewSection>
                             <tableViewSection footerTitle="Manage the settings of extension in the center of notifications." id="Ocd-v5-Fg1" userLabel="ExtenstionSection">
                                 <cells>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="7jZ-Yl-Zz5" style="IBUITableViewCellStyleDefault" id="cXe-pp-c1a" userLabel="Extenstion">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="7jZ-Yl-Zz5" imageView="oDk-xa-4E4" style="IBUITableViewCellStyleDefault" id="cXe-pp-c1a" userLabel="Extenstion">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="cXe-pp-c1a" id="3qd-lA-WJ4">
                                             <autoresizingMask key="autoresizingMask"/>
@@ -743,6 +749,9 @@
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" image="Plugin.png" id="oDk-xa-4E4">
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                </imageView>
                                             </subviews>
                                         </tableViewCellContentView>
                                         <connections>
@@ -759,7 +768,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="250" text="Add expense on startup" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gwa-Ip-Gee">
-                                                    <rect key="frame" x="15" y="11" width="177" height="21"/>
+                                                    <rect key="frame" x="52" y="11" width="177" height="21"/>
                                                     <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="17"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -770,15 +779,24 @@
                                                         <action selector="startupSwitchDidChangeValue:" destination="Dv6-6c-FEv" eventType="valueChanged" id="KGa-3k-rA7"/>
                                                     </connections>
                                                 </switch>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MoneyBox.png" translatesAutoresizingMaskIntoConstraints="NO" id="EGw-7O-b30">
+                                                    <rect key="frame" x="15" y="11" width="22" height="22"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="22" id="exs-cT-YdG"/>
+                                                        <constraint firstAttribute="width" constant="22" id="qKT-1B-AKQ"/>
+                                                    </constraints>
+                                                </imageView>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstAttribute="bottom" secondItem="Gwa-Ip-Gee" secondAttribute="bottom" constant="11" id="4M5-87-x6r"/>
-                                                <constraint firstItem="Gwa-Ip-Gee" firstAttribute="leading" secondItem="XPk-aP-X1y" secondAttribute="leading" constant="15" id="4yE-sZ-8Sh"/>
                                                 <constraint firstAttribute="bottom" secondItem="nJY-OX-oOW" secondAttribute="bottom" constant="6" id="BYZ-Tx-oQO"/>
+                                                <constraint firstItem="EGw-7O-b30" firstAttribute="leading" secondItem="XPk-aP-X1y" secondAttribute="leading" constant="15" id="Q25-aL-GcB"/>
                                                 <constraint firstItem="Gwa-Ip-Gee" firstAttribute="top" secondItem="XPk-aP-X1y" secondAttribute="top" constant="11" id="bbQ-v9-hm9"/>
                                                 <constraint firstAttribute="trailing" secondItem="nJY-OX-oOW" secondAttribute="trailing" constant="8" id="df8-Ca-jaS"/>
                                                 <constraint firstItem="nJY-OX-oOW" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Gwa-Ip-Gee" secondAttribute="trailing" constant="8" symbolic="YES" id="for-Gd-LLw"/>
                                                 <constraint firstItem="nJY-OX-oOW" firstAttribute="top" secondItem="XPk-aP-X1y" secondAttribute="top" constant="6" id="ndP-6W-iTr"/>
+                                                <constraint firstItem="Gwa-Ip-Gee" firstAttribute="leading" secondItem="EGw-7O-b30" secondAttribute="trailing" constant="15" id="z04-Ic-fzW"/>
+                                                <constraint firstAttribute="centerY" secondItem="EGw-7O-b30" secondAttribute="centerY" id="z3U-ng-Ox8"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -1337,7 +1355,11 @@
         <image name="Checkmark.png" width="21" height="21"/>
         <image name="Clothes" width="42" height="42"/>
         <image name="Cocktail" width="42" height="42"/>
+        <image name="Content.png" width="22" height="22"/>
+        <image name="CreateNew.png" width="22" height="22"/>
         <image name="DeleteSign.png" width="21" height="21"/>
+        <image name="MoneyBox.png" width="22" height="22"/>
+        <image name="Plugin.png" width="22" height="22"/>
         <image name="Search.png" width="32" height="32"/>
         <image name="Settings.png" width="32" height="32"/>
         <image name="Tomato" width="42" height="42"/>
