--- a/Depoza/ru.lproj/Main.storyboard
+++ b/Depoza/ru.lproj/Main.storyboard
@@ -1306,7 +1306,7 @@
                                     <constraints>
                                         <constraint firstAttribute="trailing" secondItem="jGb-u9-8Qt" secondAttribute="trailing" id="3H6-m0-fX0"/>
                                         <constraint firstItem="WDI-1N-8eL" firstAttribute="leading" secondItem="x2k-Nr-jZs" secondAttribute="leading" constant="15" id="40E-qh-lbt"/>
-                                        <constraint firstItem="jGb-u9-8Qt" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="WDI-1N-8eL" secondAttribute="trailing" id="O2t-6I-kZ6"/>
+                                        <constraint firstItem="jGb-u9-8Qt" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="WDI-1N-8eL" secondAttribute="trailing" constant="1" id="O2t-6I-kZ6"/>
                                         <constraint firstAttribute="centerY" secondItem="jGb-u9-8Qt" secondAttribute="centerY" id="WqM-pK-J8M"/>
                                         <constraint firstAttribute="centerY" secondItem="WDI-1N-8eL" secondAttribute="centerY" id="wnV-Gr-VuY"/>
                                     </constraints>
@@ -1372,7 +1372,7 @@
     <inferredMetricsTieBreakers>
         <segue reference="bBY-Me-af6"/>
         <segue reference="xQY-w0-KW7"/>
-        <segue reference="rRc-1T-lWX"/>
+        <segue reference="tqp-JB-Yta"/>
         <segue reference="hGy-jW-v8B"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.023529411760000001" green="0.47843137250000001" blue="0.70980392160000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
