--- a/Depoza/ru.lproj/Main.storyboard
+++ b/Depoza/ru.lproj/Main.storyboard
@@ -1237,6 +1237,7 @@
                         <outlet property="collectionView" destination="7up-cW-8Pr" id="vmt-qS-ysd"/>
                         <outlet property="collectionViewHeightConstraint" destination="8VD-Gg-mhy" id="6mH-Iu-92J"/>
                         <outlet property="pageControl" destination="VC3-d3-h8e" id="rjB-if-TTd"/>
+                        <outlet property="pageControlHeightConstraint" destination="0Vu-D2-3D5" id="P2n-J9-Euh"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ngY-57-QyD" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1248,7 +1249,7 @@
             <objects>
                 <tableViewController id="OhM-zH-INc" customClass="SelectedCategoryTableViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="sEb-8t-xKX">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="455"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.95686274509803926" alpha="1" colorSpace="calibratedRGB"/>
                         <prototypes>
@@ -1371,8 +1372,8 @@
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
         <segue reference="bBY-Me-af6"/>
-        <segue reference="xQY-w0-KW7"/>
         <segue reference="qiW-IC-btw"/>
+        <segue reference="nDW-xd-tmg"/>
         <segue reference="hGy-jW-v8B"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.023529411760000001" green="0.47843137250000001" blue="0.70980392160000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
