--- a/Depoza/Base.lproj/Main.storyboard
+++ b/Depoza/Base.lproj/Main.storyboard
@@ -239,13 +239,31 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WsG-nm-M5K">
+                                <rect key="frame" x="252" y="387" width="60" height="60"/>
+                                <color key="backgroundColor" red="0.039215686274509803" green="0.47843137254901957" blue="0.70980392156862748" alpha="0.90000000000000002" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="i4d-QK-ud4"/>
+                                    <constraint firstAttribute="width" constant="60" id="oTS-cO-wDb"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="50"/>
+                                <inset key="contentEdgeInsets" minX="0.0" minY="-8" maxX="0.0" maxY="0.0"/>
+                                <state key="normal" title="+">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="JNE-qc-fiL" kind="modal" identifier="AddExpense" id="CCd-Tz-b70"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="LcM-Rm-VQk" firstAttribute="top" secondItem="Lms-O3-59V" secondAttribute="top" id="6Kx-1w-gWY"/>
                             <constraint firstItem="LcM-Rm-VQk" firstAttribute="leading" secondItem="Lms-O3-59V" secondAttribute="leading" id="WXf-kD-aUo"/>
                             <constraint firstAttribute="bottom" secondItem="LcM-Rm-VQk" secondAttribute="bottom" id="fFl-AZ-SPK"/>
+                            <constraint firstItem="Npd-sX-d81" firstAttribute="top" secondItem="WsG-nm-M5K" secondAttribute="bottom" constant="8" symbolic="YES" id="ghB-vp-v0g"/>
                             <constraint firstAttribute="trailing" secondItem="LcM-Rm-VQk" secondAttribute="trailing" id="krU-4h-EdT"/>
+                            <constraint firstAttribute="trailing" secondItem="WsG-nm-M5K" secondAttribute="trailing" constant="8" id="nQh-7I-QJ8"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Expenses" id="H7q-K3-3GL">
@@ -254,13 +272,9 @@
                                 <segue destination="1Gu-Al-Idk" kind="push" identifier="PieChart" id="18Y-dP-37v"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="tTU-ch-4YA">
-                            <connections>
-                                <segue destination="JNE-qc-fiL" kind="modal" identifier="AddExpense" id="3er-JC-Cyy"/>
-                            </connections>
-                        </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="addTransactionRoundedButton" destination="WsG-nm-M5K" id="2Ic-nL-fNm"/>
                         <outlet property="containerViewHeightConstraint" destination="0sj-Na-8SW" id="Ehc-L6-v4h"/>
                         <outlet property="tableView" destination="LcM-Rm-VQk" id="rCs-nx-4dA"/>
                         <outlet property="totalExpensesLabel" destination="kxL-xl-ePS" id="bHk-oc-csJ"/>
