--- a/Depoza/ru.lproj/Main.storyboard
+++ b/Depoza/ru.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="Wwr-sZ-vet">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="Wwr-sZ-vet">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
@@ -141,7 +141,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qch-6P-CnI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="487" y="-753"/>
+            <point key="canvasLocation" x="925" y="303"/>
         </scene>
         <!--Расходы-->
         <scene sceneID="uaz-hx-xfG">
@@ -265,7 +265,7 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Расходы" id="H7q-K3-3GL">
-                        <barButtonItem key="leftBarButtonItem" title="Chart" id="YiM-GO-dM4">
+                        <barButtonItem key="leftBarButtonItem" image="PieChart.png" id="YiM-GO-dM4">
                             <connections>
                                 <segue destination="1Gu-Al-Idk" kind="push" identifier="PieChart" id="18Y-dP-37v"/>
                             </connections>
@@ -1372,6 +1372,7 @@
         <image name="CreateNew.png" width="22" height="22"/>
         <image name="DeleteSign.png" width="21" height="21"/>
         <image name="MoneyBox.png" width="22" height="22"/>
+        <image name="PieChart.png" width="22" height="22"/>
         <image name="Plugin.png" width="22" height="22"/>
         <image name="Search.png" width="32" height="32"/>
         <image name="Settings.png" width="32" height="32"/>
